crates/test-files/fixtures/compile_errors/ctx_undefined_event.fe
event YouWin {
    amount: u256
}

contract Foo {
    pub fn bar() {
        emit YouWin(amount: 42)
    }
}
